--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Secret": "this is a very long string to be used as secret"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
