--- a/appsettings.json
+++ b/appsettings.json
@@ -2,12 +2,19 @@
   "AppSettings": {
     "Secret": "this is a very long string to be used as secret"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+  "Serilog": {
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=my-eshop-DB;Integrated Security=SSPI;",
+          "tableName": "Logs",
+          "autoCreateSqlTable": true
+        }
+      }
+    ],
+    "Enrich": [ "WithClientIp", "WithClientAgent" ]
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
