--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,10 @@
 {
   "AppSettings": {
-    "Secret": "this is a very long string to be used as secret"
+    "Secret": "this is a very long string to be used as secret",
+    "SmtpHost": "smtp.host",
+    "SmtpPort": 587,
+    "SmtpUsername": "username@mysite.com",
+    "SmtpPassword": "passssss"
   },
   "Serilog": {
     "MinimumLevel": "Information",
